<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.fragment.ProfileFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:contentDescription="@string/background_image"
        android:src="@drawable/top_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".85"
            android:orientation="vertical"
            android:paddingHorizontal="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:orientation="horizontal">

                <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/avatar"
                        tools:srcCompat="@tools:sample/avatars" />
                </com.google.android.material.circularreveal.cardview.CircularRevealCardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fullNameTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fullname"
                        android:textSize="@dimen/text_size_normal" />

                    <TextView
                        android:id="@+id/usernameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username" />
                </LinearLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewProfileMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>